* Fixed layout issue that made the editor area too small when editting html descriptions.

--- a/css/fantastic-depths.css
+++ b/css/fantastic-depths.css
@@ -1184,7 +1184,7 @@ h1, h2, h3, h4 {
 .fantastic-depths .sheet-body,
 .fantastic-depths .sheet-body .tab,
 .fantastic-depths .sheet-body .tab .editor {
-  /*height: 100%;*/
+  height: 100%;
   min-height: 32px;
 }
 .fantastic-depths .tox .tox-editor-container {
